// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDeleteDialog matches the snapshot when open = false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfirmDeleteDialog
    dashboardName=""
    onContinueEditing={[MockFunction]}
    onDeleteConfirmed={[MockFunction]}
    open={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): false,
  Symbol(enzyme.__nodes__): Array [
    false,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "d2": Object {
        "currentUser": Object {
          "firstName": "Mark the Ghost",
          "surname": "Polak",
          "userSettings": Object {
            "get": [Function],
          },
        },
      },
      "i18n": Object {
        "t": [Function],
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`ConfirmDeleteDialog when open = true matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfirmDeleteDialog
    dashboardName=""
    onContinueEditing={[MockFunction]}
    onDeleteConfirmed={[MockFunction]}
    open={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ModalTitle
          dataTest="dhis2-uicore-modaltitle"
        >
          Delete dashboard
        </ModalTitle>,
        <ModalContent
          dataTest="dhis2-uicore-modalcontent"
        >
          <span
            className="content"
          >
            Deleting dashboard "" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?
          </span>
        </ModalContent>,
        <ModalActions
          dataTest="dhis2-uicore-modalactions"
        >
          <ButtonStrip
            dataTest="dhis2-uicore-buttonstrip"
          >
            <Button
              dataTest="dhis2-uicore-button"
              onClick={[MockFunction]}
              secondary={true}
              type="button"
            >
              Cancel
            </Button>
            <Button
              dataTest="dhis2-uicore-button"
              destructive={true}
              onClick={[MockFunction]}
              type="button"
            >
              Delete
            </Button>
          </ButtonStrip>
        </ModalActions>,
      ],
      "dataTest": "dhis2-uicore-modal",
      "onClose": [MockFunction],
      "position": "middle",
      "small": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Delete dashboard",
          "dataTest": "dhis2-uicore-modaltitle",
        },
        "ref": null,
        "rendered": "Delete dashboard",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <span
            className="content"
          >
            Deleting dashboard "" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?
          </span>,
          "dataTest": "dhis2-uicore-modalcontent",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Deleting dashboard \\"\\" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?",
            "className": "content",
          },
          "ref": null,
          "rendered": "Deleting dashboard \\"\\" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?",
          "type": "span",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <ButtonStrip
            dataTest="dhis2-uicore-buttonstrip"
          >
            <Button
              dataTest="dhis2-uicore-button"
              onClick={[MockFunction]}
              secondary={true}
              type="button"
            >
              Cancel
            </Button>
            <Button
              dataTest="dhis2-uicore-button"
              destructive={true}
              onClick={[MockFunction]}
              type="button"
            >
              Delete
            </Button>
          </ButtonStrip>,
          "dataTest": "dhis2-uicore-modalactions",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Button
                dataTest="dhis2-uicore-button"
                onClick={[MockFunction]}
                secondary={true}
                type="button"
              >
                Cancel
              </Button>,
              <Button
                dataTest="dhis2-uicore-button"
                destructive={true}
                onClick={[MockFunction]}
                type="button"
              >
                Delete
              </Button>,
            ],
            "dataTest": "dhis2-uicore-buttonstrip",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "cancel",
              "nodeType": "function",
              "props": Object {
                "children": "Cancel",
                "dataTest": "dhis2-uicore-button",
                "onClick": [MockFunction],
                "secondary": true,
                "type": "button",
              },
              "ref": null,
              "rendered": "Cancel",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "delete",
              "nodeType": "function",
              "props": Object {
                "children": "Delete",
                "dataTest": "dhis2-uicore-button",
                "destructive": true,
                "onClick": [MockFunction],
                "type": "button",
              },
              "ref": null,
              "rendered": "Delete",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ModalTitle
            dataTest="dhis2-uicore-modaltitle"
          >
            Delete dashboard
          </ModalTitle>,
          <ModalContent
            dataTest="dhis2-uicore-modalcontent"
          >
            <span
              className="content"
            >
              Deleting dashboard "" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?
            </span>
          </ModalContent>,
          <ModalActions
            dataTest="dhis2-uicore-modalactions"
          >
            <ButtonStrip
              dataTest="dhis2-uicore-buttonstrip"
            >
              <Button
                dataTest="dhis2-uicore-button"
                onClick={[MockFunction]}
                secondary={true}
                type="button"
              >
                Cancel
              </Button>
              <Button
                dataTest="dhis2-uicore-button"
                destructive={true}
                onClick={[MockFunction]}
                type="button"
              >
                Delete
              </Button>
            </ButtonStrip>
          </ModalActions>,
        ],
        "dataTest": "dhis2-uicore-modal",
        "onClose": [MockFunction],
        "position": "middle",
        "small": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Delete dashboard",
            "dataTest": "dhis2-uicore-modaltitle",
          },
          "ref": null,
          "rendered": "Delete dashboard",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span
              className="content"
            >
              Deleting dashboard "" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?
            </span>,
            "dataTest": "dhis2-uicore-modalcontent",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Deleting dashboard \\"\\" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?",
              "className": "content",
            },
            "ref": null,
            "rendered": "Deleting dashboard \\"\\" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?",
            "type": "span",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <ButtonStrip
              dataTest="dhis2-uicore-buttonstrip"
            >
              <Button
                dataTest="dhis2-uicore-button"
                onClick={[MockFunction]}
                secondary={true}
                type="button"
              >
                Cancel
              </Button>
              <Button
                dataTest="dhis2-uicore-button"
                destructive={true}
                onClick={[MockFunction]}
                type="button"
              >
                Delete
              </Button>
            </ButtonStrip>,
            "dataTest": "dhis2-uicore-modalactions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Button
                  dataTest="dhis2-uicore-button"
                  onClick={[MockFunction]}
                  secondary={true}
                  type="button"
                >
                  Cancel
                </Button>,
                <Button
                  dataTest="dhis2-uicore-button"
                  destructive={true}
                  onClick={[MockFunction]}
                  type="button"
                >
                  Delete
                </Button>,
              ],
              "dataTest": "dhis2-uicore-buttonstrip",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "cancel",
                "nodeType": "function",
                "props": Object {
                  "children": "Cancel",
                  "dataTest": "dhis2-uicore-button",
                  "onClick": [MockFunction],
                  "secondary": true,
                  "type": "button",
                },
                "ref": null,
                "rendered": "Cancel",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "delete",
                "nodeType": "function",
                "props": Object {
                  "children": "Delete",
                  "dataTest": "dhis2-uicore-button",
                  "destructive": true,
                  "onClick": [MockFunction],
                  "type": "button",
                },
                "ref": null,
                "rendered": "Delete",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "d2": Object {
        "currentUser": Object {
          "firstName": "Mark the Ghost",
          "surname": "Polak",
          "userSettings": Object {
            "get": [Function],
          },
        },
      },
      "i18n": Object {
        "t": [Function],
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
